--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 	<title>Jay Itkal | Tech Support Engineer</title>
 	<script src="https://kit.fontawesome.com/40eef63782.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./Style/allScreenSize.css">
-	
+	<link rel="stylesheet" href="./Style/mediumScreenSize.css">
+	<link rel="stylesheet" href="./Style/smallScreenSize.css">
+
 </head>
 
 <body>
 
-	                                                        <!-- navbar -->
+	<!-- navbar -->
 	<div id="navbar">
 		<div id="name_image">
 			<div>
@@ -30,6 +32,7 @@
 			<div> <a href="#project">PROJECTS</a></div>
 			<div> <a href="#contact">CONTACT</a></div>
 			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank">RESUME</a></div>
+			<!-- <div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download onclick="window.open('Images\fw21-0837_Jay_Itkal_Resume.pdf')">Resume</a></div> -->
 			<div id="dropdown">
 				<i class="fa-solid fa-bars fa-2x" id="bar"></i>
 				<i class="fa-solid fa-xmark fa-2x" id="cross"></i>
@@ -50,14 +53,14 @@
 		<hr>
 	</div>
 
-	                                                        <!-- brief detail -->
+	<!-- brief detail -->
 	<div id="brief">
 		<img id="landscape" src="./Images/bg.jpg" alt="error">
-		<!-- <img id="portrait" src="./Images/portrait_edited.jpeg" alt="error"> -->
+		<img id="portrait" src="./Images/bg_p.jpg" alt="error">
 		<div>
 			<img src="./Images/DSC_7756_copy-removebg-preview.png" alt="Jay-Itkal">
 			<div id="name_tag">HEY, I'M JAY ITKAL</div>
-			<div id="brief_detail">A focused Thecnical Support Engineer, passionate about solving customer quries
+			<div id="brief_detail">A focused Technical Support Engineer, passionate about solving customer quries
 				in real time. </div>
 			<a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" download="Jay_Itkal_Resume"><button
 					id="resume_redirect">Resume <i class="fa-solid fa-download"></i></button></a>
@@ -71,18 +74,18 @@
 					<a href="tel:+919130704046"><i class="fa-solid fa-phone fa-2x"></i></a>
 				</div>
 				<div>
-					<a href="https://www.linkedin.com/in/jay-itkal-71b558249/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+					<a href="https://www.linkedin.com/in/jay-itkal-71b558249/" target="_blank"><i
+							class="fa-brands fa-linkedin fa-2x"></i></a>
 				</div>
 				<div>
-					<a href="https://github.com/Jay1631" target="_blank"><i
-							class="fa-brands fa-github fa-2x"></i></a>
+					<a href="https://github.com/Jay1631" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
 				</div>
 			</div>
 		</div>
 	</div>
 
 
-	                                                            <!-- About me -->
+	<!-- About me -->
 	<div id="about_me" class="sections">
 		<p class="tags">ABOUT ME</p>
 		<div class="line"></div>
@@ -91,11 +94,12 @@
 		<div id="description_skills">
 			<div>
 				<p><b> Get to know me!</b></p>
-				<p>I'm a <b>Technical Support Engineer</b>, having knowledge of core Linux, SQL, Shell Scripting as well as some
+				<p>I'm a <b>Technical Support Engineer</b>, having knowledge of core Linux, SQL, Shell Scripting as well
+					as some
 					frontend technologies like html, css and Javascript. I build some of the projects
 					using the technical knowledge, that I gained. Checkout some of my work in <a
 						href="#project"><b>Projects</b></a> section</p>
-				</div>
+			</div>
 			<div>
 				<p><b>My Skills</b></p>
 				<div id="skills">
@@ -109,7 +113,7 @@
 	</div>
 
 
-	                                                           <!-- Tech Stack -->
+	<!-- Tech Stack -->
 	<div id="tech_stack" class="sections">
 		<p class="tags">TECH STACKS</p>
 		<div class="line"></div>
@@ -118,8 +122,36 @@
 			<!-- insert the tech stacks -->
 		</div>
 	</div>
-		
-	                                                            <!-- Projects -->
+
+	
+	<div class="container">
+		<div class="section__header">
+			<p class="tags">Customer Skills</p>
+			<div class="line"></div>
+			<!-- <span class="section__subtitle">What I do</span> -->
+		</div>
+
+		<div id="customer">
+			<!-- insert the tech stacks -->
+		</div>
+
+	</div>
+
+
+	<div class="container">
+		<div class="section__header">
+			<p class="tags">Soft Skills</p>
+			<div class="line"></div>
+			<!-- <span class="section__subtitle">What I do</span> -->
+		</div>
+
+		<div id="soft">
+			<!-- insert the tech stacks -->
+		</div>
+	</div>
+
+
+	<!-- Projects -->
 	<div id="project" class="sections">
 		<p class="tags">PROJECTS</p>
 		<div class="line"></div>
@@ -130,7 +162,9 @@
 		</div>
 	</div>
 
-	                                                            <!-- Contact -->
+
+
+	<!-- Contact -->
 	<div id="contact" class="sections">
 		<p class="tags">CONTACT</p>
 		<div class="line"></div>
