--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<div id="footerInfo">
 			<p>JAY ITKAL</p>
 			<div>
-				<p>A focused Thecnical Support Engineer, passionate about solving customer quries
+				<p>A focused Technical Support Engineer, passionate about solving customer quries
 					in real time.</p>
 			</div>
 		</div>
