--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<div id="tabs">
 			<div> <a href="#brief">HOME</a> </div>
 			<div> <a href="#about_me">ABOUT</a></div>
+			<div> <a href="#tech_stack">SKILLS</a></div>
 			<div> <a href="#project">PROJECTS</a></div>
 			<div> <a href="#contact">CONTACT</a></div>
 			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank">RESUME</a></div>
@@ -44,6 +45,8 @@
 		<a href="#brief">HOME</a>
 		<hr>
 		<a href="#about_me">ABOUT</a>
+		<hr>
+		<a href="#tech_stack">SKILLS</a>
 		<hr>
 		<a href="#project">PROJECTS</a>
 		<hr>
