--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 			<div> <a href="#tech_stack">SKILLS</a></div>
 			<div> <a href="#project">PROJECTS</a></div>
 			<div> <a href="#contact">CONTACT</a></div>
-			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank">RESUME</a></div>
-			<!-- <div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download onclick="window.open('Images\fw21-0837_Jay_Itkal_Resume.pdf')">Resume</a></div> -->
+			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download onclick="window.open('https://drive.google.com/file/d/1Z9aE65JESktgb6J8Np52rd48xyNXtVJ5/view?usp=share_link')">RESUME</a></div>
 			<div id="dropdown">
 				<i class="fa-solid fa-bars fa-2x" id="bar"></i>
 				<i class="fa-solid fa-xmark fa-2x" id="cross"></i>
