--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
 			<div> <a href="#tech_stack">SKILLS</a></div>
 			<div> <a href="#project">PROJECTS</a></div>
 			<div> <a href="#contact">CONTACT</a></div>
-			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download onclick="window.open('https://drive.google.com/file/d/1Z9aE65JESktgb6J8Np52rd48xyNXtVJ5/view?usp=share_link')">RESUME</a></div>
-			<div id="dropdown">
-				<i class="fa-solid fa-bars fa-2x" id="bar"></i>
-				<i class="fa-solid fa-xmark fa-2x" id="cross"></i>
+			<div> <a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download
+					onclick="window.open('https://drive.google.com/file/d/15J8Ez_wkaBLe4BdZEVfPYVJwEDScFvrk/view?usp=share_link')">RESUME</a>
+			</div>
+			<div id="dropdown" onclick="lucky()">
+				<i class="fa-solid fa-bars" id="bar" ></i>
+				<!-- <i class="fa-solid fa-xmark" id="cross"></i> -->
 			</div>
 		</div>
 	</div>
@@ -51,7 +53,8 @@
 		<hr>
 		<a href="#contact">CONTACT</a>
 		<hr>
-		<a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank">RESUME</a>
+		<a href="./Images/fw21-0837_Jay_Itkal_Resume.pdf" target="_blank" download
+			onclick="window.open('https://drive.google.com/file/d/15J8Ez_wkaBLe4BdZEVfPYVJwEDScFvrk/view?usp=share_link')">RESUME</a>
 		<hr>
 	</div>
 
@@ -91,12 +94,14 @@
 	<div id="about_me" class="sections">
 		<p class="tags">ABOUT ME</p>
 		<div class="line"></div>
-		<div class="about_the_section">Here you will find more information about me, my current skills mostly in terms
+		<div class="about_the_section">Here you will find more information about me, my current skills mostly in
+			terms
 			of programming and technology</div>
 		<div id="description_skills">
 			<div>
 				<p><b> Get to know me!</b></p>
-				<p>I'm a <b>Technical Support Engineer</b>, having knowledge of core Linux, SQL, Shell Scripting as well
+				<p>I'm a <b>Technical Support Engineer</b>, having knowledge of core Linux, SQL, Shell Scripting as
+					well
 					as some
 					frontend technologies like html, css and Javascript. I build some of the projects
 					using the technical knowledge, that I gained. Checkout some of my work in <a
@@ -125,7 +130,7 @@
 		</div>
 	</div>
 
-	
+
 	<div class="container">
 		<div class="section__header">
 			<p class="tags">Customer Skills</p>
@@ -157,7 +162,8 @@
 	<div id="project" class="sections">
 		<p class="tags">PROJECTS</p>
 		<div class="line"></div>
-		<div class="about_the_section">Here find the projects that I've done. Find the deployed link and github link of
+		<div class="about_the_section">Here find the projects that I've done. Find the deployed link and github link
+			of
 			respective projects</div>
 		<div id="projects_div">
 			<!-- using javscript for the same -->
