--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="shortcut icon"
+	<!-- <link rel="icon"
 		href="https://drive.google.com/file/d/1Eb9xwpqM5wocqJ6k_t4wH2nZQVyt3p_A/view?usp=share_link"
 		type="image/x-icon"> -->
 	<title>Jay Itkal | Tech Support Engineer</title>
