--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="icon"
-		href="https://drive.google.com/file/d/1Eb9xwpqM5wocqJ6k_t4wH2nZQVyt3p_A/view?usp=share_link"
+<!-- 	<link rel="icon"
+		href="./Images"
 		type="image/x-icon"> -->
 	<title>Jay Itkal | Tech Support Engineer</title>
 	<script src="https://kit.fontawesome.com/40eef63782.js" crossorigin="anonymous"></script>
